--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
   hooks:
   - id: format-fix
     name: Formatting (ruff)
-    entry: ruff format
+    entry: uv run ruff format
     language: system
     types: [python]
     stages: [commit]
