fix: correction of the dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,18 @@ version = "0.1.0"
 description = "Vision project that does use YOLO models"
 authors = ["Willem Adnet <willem.adnet@grenoble-inp.org>"]
 readme = "README.md"
-requires-python = ">=3.11.6"
+requires-python = "==3.11.6"
 dependencies = [
+    "coremltools>=9.0",
     "loguru>=0.7.3",
     "mlx>=0.30.3",
     "mlx-lm>=0.29.1",
-    "numpy>=2.4.1",
+    "numpy>=1.14.5,<=2.3.5",
     "opencv-python>=4.13.0.90",
     "pandas>=3.0.0",
+    "pillow>=12.1.0",
     "ruff>=0.14.14",
+    "torch>=2.9.1",
     "ultralytics>=8.4.7",
 ]
 
